refactor : выполнение ТЗ 8